force-app/main/default/objects/Property__c/fields/count_of_total_rents__c.field-meta.xml
<CustomField>
    <fullName>count_of_total_rents__c</fullName>
    <label>count of total rents</label>
    <summaryForeignKey>Lease__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>