force-app/main/default/objects/Property__c/fields/Land_Type__c.field-meta.xml
<CustomField>
    <fullName>Land_Type__c</fullName>
    <label>Land Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open land</fullName>
            </value>
            <value>
                <fullName>Constructed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>