force-app/main/default/objects/Property__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Land_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Commertial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>