force-app/main/default/objects/Property__c/fields/max_rent_amount__c.field-meta.xml
<CustomField>
    <fullName>max_rent_amount__c</fullName>
    <label>max rent amount</label>
    <summarizedField>Lease__c.Rent_Amount__c</summarizedField>
    <summaryForeignKey>Lease__c.Property__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>