force-app/main/default/objects/Property__c/fields/min_Rent_amount__c.field-meta.xml
<CustomField>
    <fullName>min_Rent_amount__c</fullName>
    <label>min Rent amount</label>
    <summarizedField>Lease__c.Rent_Amount__c</summarizedField>
    <summaryForeignKey>Lease__c.Property__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>