force-app/main/default/objects/Property__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Status</label>
    <type>Checkbox</type>
</CustomField>