force-app/main/default/objects/Property__c/fields/total_rent_amount__c.field-meta.xml
<CustomField>
    <fullName>total_rent_amount__c</fullName>
    <label>total rent amount</label>
    <summarizedField>Lease__c.Rent_Amount__c</summarizedField>
    <summaryForeignKey>Lease__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>