force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Land_Type__c</columns>
    <columns>Lease_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>